# ImgAlgo

./: .gitignore  README.md
doc/: OpenCV_4.13.0_代码结构分析.md  OpenCV_4.13.0_图片算法详解.md  OpenCV_4.13.0_快速参考.md  OpenCV_4.13.0_模块依赖关系.md  README.md
sample/DiffImg/: CMakeLists.txt  Makefile  README.md  image_comparison.cpp
